--- a/TabataTimer/app/src/main/res/layout/activity_sequence_edit.xml
+++ b/TabataTimer/app/src/main/res/layout/activity_sequence_edit.xml
@@ -98,4 +98,14 @@
             android:background="@color/pick_color_4" />
     </RadioGroup>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/phases_recyclerview"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        tools:listitem="@layout/recyclerview_phase_item"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/color_picker" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
