--- a/TabataTimer/app/src/main/res/layout/activity_sequence_edit.xml
+++ b/TabataTimer/app/src/main/res/layout/activity_sequence_edit.xml
@@ -102,11 +102,12 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         tools:listitem="@layout/recyclerview_phase_item"
-        app:layout_constraintBottom_toTopOf="@id/save_sequence_button"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/color_picker" />
 
+    <!--
     <Button
         android:id="@+id/save_sequence_button"
         style="?textBody"
@@ -117,5 +118,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/phases_recyclerview" />
+    -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
