--- a/TabataTimer/app/src/main/res/layout/activity_sequence_edit.xml
+++ b/TabataTimer/app/src/main/res/layout/activity_sequence_edit.xml
@@ -139,22 +139,21 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         tools:listitem="@layout/recyclerview_phase_item"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/add_phase_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/color_picker" />
 
-    <!--
+
     <Button
-        android:id="@+id/save_sequence_button"
+        android:id="@+id/add_phase_button"
         style="?textBody"
-        android:text="@string/save"
+        android:text="@string/add_phase"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/phases_recyclerview" />
-    -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
