--- a/TabataTimer/app/src/main/res/layout/activity_sequence_edit.xml
+++ b/TabataTimer/app/src/main/res/layout/activity_sequence_edit.xml
@@ -33,6 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/repetitions_number"
+        app:layout_constraintBottom_toTopOf="@id/decrease_reps_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/sequence_title_edittext"
@@ -57,10 +58,10 @@
         android:layout_height="wrap_content"
         android:gravity="top"
         android:layout_marginBottom="2dp"
-        app:layout_constraintBottom_toTopOf="@id/color_picker"
         app:layout_constraintEnd_toStartOf="@id/increase_reps_button"
         app:layout_constraintStart_toEndOf="@id/decrease_reps_button"
-        app:layout_constraintTop_toBottomOf="@id/sequence_repetitions_textview" />
+        app:layout_constraintTop_toBottomOf="@id/sequence_repetitions_textview"
+        app:layout_constraintBottom_toTopOf="@id/color_picker"/>
 
     <Button
         style="?textTitle"
@@ -103,7 +104,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/sequence_repetitions_number_textview"
+        app:layout_constraintTop_toBottomOf="@id/decrease_reps_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
